Agregó nuevos archivos a gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-/Coding Dojo/finanzas/
+.DS_Store
+Bootcamp/Clases/apresto_laboral/1. Entendiendo tu narrativa/JOSEMARIA_NARANJO Career Services Assignment  - Building Your Narrative (Spanish).docx
+finanzas/Septiembre.pdf
+
+finanzas/Agosto_3.pdf
+finanzas/Agosto_2.pdf
+finanzas/Agosto_1.pdf
